tests/failed/03-expected-attr-args.stderr
error: expected attribute arguments
 --> $DIR/03-expected-attr-args.rs:4:3
  |
4 | #[endian]
  |   ^^^^^^
